# cyberbullying-detection

./: .gitignore  .pre-commit-config.yaml  Makefile.init.mk  README.md  data_source.dvc  eda_exploration.ipynb  pyproject.toml
.dvc/: config
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
eda_notebooks/: eda_exploration.ipynb
images/backend/: WebFrameworksProtocols.py
notebooks/: eda_exploration.ipynb
src/cyberbullying-detection/production/: __init__.py
src/cyberbullying-detection/train/abstractions/: ABC_trainer.py
src/cyberbullying_detection/train/: datatrain.dvc
src/cyberbullying_detection/train/abstractions/: ABC_Pipeline.py  ABC_trainer.py
src/cyberbullying_detection/train/pipeline/: PipelineFuncs.py  TextPipeline.py  TransformersTextPipeline.py
src/cyberbullying_detection/train/validation_classes/: validation_config.py  validation_interfaces.py
src/train/abstractions/: ABC_trainer.py
test/: test_module.py
